--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,10 @@
     "@types/node": "^20.10.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@visx/group": "^3.3.0",
+    "@visx/mock-data": "^3.3.0",
+    "@visx/scale": "^3.5.0",
+    "@visx/shape": "^3.5.0",
     "bootstrap": "^5.3.2",
     "next": "^14.0.3",
     "react": "^18.2.0",
